# VoronoiMap

./: .coveragerc  .dockerignore  .gitignore  AGENTS.md  BIRTH_CERTIFICATE.md  CONTRIBUTING.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  LICENSE  LIFE-GOALS.md  MANIFEST.in  MEMORY.md  README.md  SOUL.md  TEAM.md  TOOLS.md  USER.md  analyze_chatgpt.py  birth_certificate.html  bug-comment.md  bug-report.md  builder-state.json  builder-task.md  bulk-close.ps1  bulk-merge.ps1  bulk-protect.ps1  cluster_report.html  compression_demo.srv  cost-anomaly.html  csv_demo.srv  daily-digest-2026-04-24.md  dispatch_report.html  eb1a-form-copy.md  gardener-task.md  gardener-weights.json  icgis2026-website-draft.md  install-service.ps1  install-winsentinel.ps1  lc-blurb-pending.md  (+246 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  issue-labeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: algorithm_accuracy.yml  bug_report.yml  config.yml  docs_issue.yml  feature_request.yml  performance_issue.yml  question.yml  regression.yml  security_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  issue-labeler.yml  labeler.yml  pages.yml  pr-size.yml  publish.yml  stale.yml
.openclaw/: workspace-state.json
docs/: API.md  index.html  simulation-engines.html
docs-src/: changelog.md  contributing.md  index.md
docs-src/algorithm/: implementation.md  overview.md
docs-src/getting-started/: installation.md  quickstart.md
docs-src/guide/: advanced-modules.md  api.md  benchmarking.md  cli.md  data-format.md  extensions.md  module-catalog.md  tutorials.md
memory/: 2026-01-31.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-05.md  2026-02-07.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-14.md  2026-03-15-evening.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  (+43 more)
projects/: longevity-protocol.md  muscle-gain.md  weight-loss.md
scripts/: run-builder.ps1  run-gardener.ps1
sdk/: pyproject.toml
sdk/agentlens/: cli.py
sdk/tests/: test_cli.py
state/sessions/: agent%3Aclaude%3Aacp%3Ae9a0b9b8-6872-4a43-8ced-353646096a4e%3Aoneshot%3A31a05927-d636-4498-9d0c-54a4a9af0f11.json  agent%3Aclaude%3Aacp%3Ae9a0b9b8-6872-4a43-8ced-353646096a4e%3Aoneshot%3Ab674495b-5776-4c11-8fc2-a579c5fe766a.json  agent%3Acodex%3Aacp%3A00d65062-5da8-444b-a72f-f1ac546e4288%3Aoneshot%3Ad6d8a2e6-f484-4d50-81ea-4813df8a6993.json  agent%3Acodex%3Aacp%3A010f5f65-3c6b-45c6-9a2d-8267c8cc46ff%3Aoneshot%3A99446bd6-48a3-4204-966e-32a8cf7b1872.json  agent%3Acodex%3Aacp%3A01be50f9-e9d5-41e9-9c97-bfc9dd500c4b%3Aoneshot%3Abafeb89b-eda1-43b9-b475-b68673bc9e4c.json  agent%3Acodex%3Aacp%3A01c2df54-033b-4df2-b9a9-27c50c216a5e%3Aoneshot%3Ad414871a-79fb-4c97-8866-0c1a577ddf6a.json  agent%3Acodex%3Aacp%3A03c3915b-2ec4-47ee-8243-0c5486913d75%3Aoneshot%3Ad37fe1a6-1274-4bfc-a56c-f66156e020a2.json  agent%3Acodex%3Aacp%3A058e2ab8-004e-4f0e-89e7-b036b1f6e8c8%3Aoneshot%3Af6976d31-5061-4347-a765-cbdd570d77a4.json  agent%3Acodex%3Aacp%3A067bfdc5-2d5e-497f-92d8-3b60b44a5e2d%3Aoneshot%3A11497fd0-2280-450c-ba1d-d5e53fda7234.json  (+152 more)
temp-builder/: .codecov.yml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  a.srv  foreach_demo.srv  fstring_demo.srv  hello.srv  import_demo.srv  import_utils.srv  map_demo.srv  mkdocs.yml  pyproject.toml  saurav.py  sauravcc.py  sauravdb.py  stdlib_demo.srv  test.srv  test_all.srv  test_builtins.srv  test_fstring.srv  try_catch_demo.srv
temp-builder/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  labeler.yml
temp-builder/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_improvement.md  feature_request.md
temp-builder/.github/workflows/: ci.yml  codeql.yml  docker.yml  labeler.yml  pages.yml  publish.yml  stale.yml
temp-builder/GraphVisual/Gvisual/src/gvisual/: VertexConnectivityAnalyzer.java
temp-builder/GraphVisual/Gvisual/test/gvisual/: VertexConnectivityAnalyzerTest.java
temp-builder/Gvisual/src/gvisual/: RandomWalkAnalyzer.java
temp-builder/Vidly/Models/: Promotion.cs
temp-builder/demos/: list_comprehension_demo.srv  pipe_demo.srv
temp-builder/docs/: ARCHITECTURE.md  EXAMPLES.md  LANGUAGE.md  changelog.md  compiler.md  first-program.md  getting-started.md  index.md
temp-builder/everything/lib/core/services/: routine_builder_service.dart
temp-builder/everything/test/core/: routine_builder_service_test.dart
temp-builder/sauravcode/: __init__.py  cli.py
temp-builder/src/replication/: steganography.py
temp-builder/test/core/: screen_time_tracker_service_test.dart
temp-builder/tests/: test_builtin_errors.py  test_compiler.py  test_compiler_advanced.py  test_compiler_maps.py  test_debugger.py  test_import.py  test_interpreter.py  test_list_comprehension.py  test_match.py  test_pipe_operator.py  test_steganography.py
tests/: test_access.py  test_animate.py  test_ascii.py  test_autocorr.py  test_automata.py  test_balance.py  test_benchmark.py  test_buffer.py  test_cartogram.py  test_causality.py  test_centroid.py  test_centroid_extended.py  test_changedetect.py  test_circlepack.py  test_classify.py  test_clip.py  test_cluster.py  test_color.py  test_coloring.py  test_compare.py  test_compete.py  test_contagion.py  test_contour.py  test_coverage.py  test_crossval.py  test_crystal.py  test_curator.py  test_cvd.py  test_delaunay.py  test_demo_rng_isolation.py  test_diffusion.py  test_dispatch.py  test_displacement.py  test_doctor.py  test_dxf.py  test_edge.py  test_erosion.py  test_evolve.py  test_fingerprint.py  test_flowfield.py  (+104 more)
