[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voronoimap"
version = "1.1.0"
description = "Estimate aggregate statistics of unknown point sets using Voronoi partitioning and nearest-neighbor oracles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Saurav Bhattacharya", email = "online.saurav@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = [
    "voronoi",
    "nearest-neighbor",
    "spatial-analysis",
    "estimation",
    "aggregate-statistics",
    "computational-geometry",
]

[project.optional-dependencies]
fast = [
    "numpy>=1.20",
    "scipy>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.scripts]
voronoimap = "vormap:main"

[project.urls]
Homepage = "https://github.com/sauravbhattacharya001/VoronoiMap"
Repository = "https://github.com/sauravbhattacharya001/VoronoiMap"
Issues = "https://github.com/sauravbhattacharya001/VoronoiMap/issues"
Documentation = "https://sauravbhattacharya001.github.io/VoronoiMap/"

[tool.setuptools]
py-modules = [
    "vormap",
    "vormap_access",
    "vormap_autocorr",
    "vormap_clip",
    "vormap_cluster",
    "vormap_color",
    "vormap_compare",
    "vormap_coverage",
    "vormap_edge",
    "vormap_generate",
    "vormap_geojson",
    "vormap_geometry",
    "vormap_graph",
    "vormap_heatmap",
    "vormap_hotspot",
    "vormap_hull",
    "vormap_interp",
    "vormap_kde",
    "vormap_kml",
    "vormap_landscape",
    "vormap_mapalgebra",
    "vormap_merge",
    "vormap_mosaic",
    "vormap_network",
    "vormap_nndist",
    "vormap_outlier",
    "vormap_pathplan",
    "vormap_pattern",
    "vormap_pipeline",
    "vormap_power",
    "vormap_query",
    "vormap_regularity",
    "vormap_relax",
    "vormap_report",
    "vormap_sample",
    "vormap_seeds",
    "vormap_stability",
    "vormap_temporal",
    "vormap_territory",
    "vormap_transect",
    "vormap_trend",
    "vormap_variogram",
    "vormap_viz",
    "vormap_watershed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["vormap", "vormap_access", "vormap_autocorr", "vormap_clip", "vormap_cluster", "vormap_color", "vormap_compare", "vormap_coverage", "vormap_edge", "vormap_generate", "vormap_geojson", "vormap_geometry", "vormap_graph", "vormap_heatmap", "vormap_hotspot", "vormap_hull", "vormap_interp", "vormap_kde", "vormap_kml", "vormap_landscape", "vormap_mapalgebra", "vormap_merge", "vormap_mosaic", "vormap_network", "vormap_nndist", "vormap_outlier", "vormap_pathplan", "vormap_pattern", "vormap_pipeline", "vormap_power", "vormap_query", "vormap_regularity", "vormap_relax", "vormap_report", "vormap_sample", "vormap_seeds", "vormap_stability", "vormap_temporal", "vormap_territory", "vormap_transect", "vormap_trend", "vormap_variogram", "vormap_viz", "vormap_watershed"]
