[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens"
version = "1.3.0"
description = "Observability and Explainability for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Saurav Bhattacharya", email = "online.saurav@gmail.com"},
]
keywords = [
    "ai",
    "agents",
    "observability",
    "explainability",
    "llm",
    "monitoring",
    "tracing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
]

[project.scripts]
agentlens = "agentlens.cli:main"

[project.urls]
Homepage = "https://github.com/sauravbhattacharya001/agentlens"
Documentation = "https://sauravbhattacharya001.github.io/agentlens/"
Repository = "https://github.com/sauravbhattacharya001/agentlens"
Issues = "https://github.com/sauravbhattacharya001/agentlens/issues"
Changelog = "https://github.com/sauravbhattacharya001/agentlens/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["agentlens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agentlens"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
